change readme file & fix error
