# internal/models/user.go
@@ -25,7 +25,7 @@ type LoginRequest struct {
 	Password string `json:"password" binding:"required"`
 }
 
-type LoginResponse struct {
+type AuthResponse struct {
 	Token string `json:"token"`
 	User  *User  `json:"user"`
 }
